fixed wona fb link, added link to planetiitr

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<div id="wrapper">
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
-				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in">WoNA Website</a>,<a href="http://wona.co.in/blog">Blog</a>, or their <a href="http://facebook.com/WoNA">Facebook page</a>. This page was designed by <a href="http://captnemo.in/about">Abhay Rana</a>, in case you were wondering...
+				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in">WoNA Website</a>,<a href="http://wona.co.in/blog">Blog</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. This page was designed by <a href="http://captnemo.in/about">Abhay Rana</a>, in case you were wondering... <br>
+				You may also be interested in <a href="http://planetaki.com/iitr">Planet IITR <a href="https://facebook.com/PlanetIITR">(FB)</a></a>, a single source for all blogs, articles, and news related to IITR campus.
 			</div>
 			<h2>2012</h2>
 			<div class="year">
