--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
 	<head>
+      	<meta charset="utf-8">
 		<title>Watch Out Archives</title>
 		<link rel="stylesheet" href="style.css" type="text/css">
+      	<script type="text/javascript">
+			var _gaq = _gaq || [];
+  			_gaq.push(['_setAccount', 'UA-5922129-9']);
+  			_gaq.push(['_trackPageview']);
+  			(function() {
+    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  			})();
+		</script>
 	</head>
-	<body>
+	<body lang="en">
 		<div id="wrapper">
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
