Added feb 2013 issue.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in">WoNA Website</a>,<a href="http://wona.co.in/blog">Blog</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. This page was designed by <a href="http://captnemo.in/about">Abhay Rana</a>, in case you were wondering... <br>
 				You may also be interested in <a href="http://planetaki.com/iitr">Planet IITR <a href="https://facebook.com/PlanetIITR">(FB)</a></a>, a single source for all blogs, articles, and news related to IITR campus.
 			</div>
+			<h2>2013</h2>
+			<div class="year">
+				<div class="issue">
+					<img class="thumbnail" src="2013-02.jpg">
+					<a class="button" href="2013-02.pdf">February</a>
+				</div>
+				<div class="cb"></div>
+			</div>
 			<h2>2012</h2>
 			<div class="year">
 				<div class="issue">
@@ -30,6 +38,7 @@
 				</div>
 				<div class="cb"></div>
 			</div>
+			
 			<h2>2011</h2>
 			<div class="year">
 				<div class="issue">
