--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 					<img class="thumbnail" src="2013-02.jpg">
 					<a class="button" href="2013-02.pdf">February</a>
 				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2013-04.jpg">
+					<a class="button" href="2013-04.pdf">April</a>
+				</div>
 				<div class="cb"></div>
 			</div>
 			<h2>2012</h2>
