New edition. 2013 Nov.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 			<h2>2013</h2>
 			<div class="year">
 				<div class="issue">
+					<img class="thumbnail" src="2013-11.jpg">
+					<a class="button" href="2013-11.pdf">November</a>
+				</div>
+				<div class="issue">
 					<img class="thumbnail" src="2013-02.jpg">
 					<a class="button" href="2013-02.pdf">February</a>
 				</div>
