Fix chronological order of magazines

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
 			<h2>2013</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2013-11.jpg">
-					<a class="button" href="2013-11.pdf">November</a>
-				</div>
-				<div class="issue">
 					<img class="thumbnail" src="2013-02.jpg">
 					<a class="button" href="2013-02.pdf">February</a>
 				</div>
@@ -36,6 +32,10 @@
 					<img class="thumbnail" src="2013-04.jpg">
 					<a class="button" href="2013-04.pdf">April</a>
 				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2013-11.jpg">
+					<a class="button" href="2013-11.pdf">November</a>
+				</div>"
 				<div class="cb"></div>
 			</div>
 			<h2>2012</h2>
