--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 					<img class="thumbnail" src="2012-04-newsletter.jpg">
 					<a class="button" href="2012-04-newsletter.pdf">Newsletter</a>
 				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2012-09.jpg">
+					<a class="button" href="2012-09.pdf">September</a>
+				</div>
 				<div class="cb"></div>
 			</div>
 			
