--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 			<div class="year">
 				<div class="issue">
 					<img class="thumbnail" src="2014-04.jpg">
-					<a class="button" href="2014-04.pdf">Spring</a>
+					<a class="button" href="2014-10.pdf">Spring</a>
+				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2014-10.jpg">
+					<a class="button" href="2014-10.pdf">Autumn</a>
 				</div>
 				<div class="cb"></div>
 			</div>
