Minor copy edits

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 		<div id="wrapper">
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
-				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA Blog</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. This page was designed by <a href="http://captnemo.in/about">Abhay Rana</a>, in case you were wondering... <br>
-				You may also be interested in <a href="https://facebook.com/PlanetIITR">Planet IITR</a>(<a href="https://twitter.com/planetiitr">twitter</a>), a single source for all blogs, articles, and news related to IITR campus.
+				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA Blog</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. These archives are maintained by <a href="http://captnemo.in/about">Nemo</a>, in case you were wondering... <br>
+				You may also be interested in <a href="https://facebook.com/PlanetIITR">Planet IITR</a>(<a href="https://twitter.com/planetiitr">twitter</a>), a single source for all blogs, articles, and news related to IITR campus.<br>
+				If you have an issue that is not listed here, please <a href="/contact/">get in touch with me</a>.
 			</div>
 			<h2>2014</h2>
 			<div class="year">
