Adds new issue, thanks to abhijeet

--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
 		<div id="wrapper">
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
-				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA Blog</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. These archives are maintained by <a href="http://captnemo.in/about">Nemo</a>, in case you were wondering... <br>
+				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA website</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. These archives are maintained by <a href="http://captnemo.in/about">Nemo</a>, in case you were wondering... (pseudo-wona)<br>
 				You may also be interested in <a href="https://facebook.com/PlanetIITR">Planet IITR</a>(<a href="https://twitter.com/planetiitr">twitter</a>), a single source for all blogs, articles, and news related to IITR campus.<br>
-				If you have an issue that is not listed here, please <a href="/contact/">get in touch with me</a>.
+				The PlanetIITR Page is currently looking for maintainers, since I've graduated. In case you'd like to help me with that, let me know.<br>
+				If you have a copy of an issue that is not listed here, please <a href="/contact/">get in touch with me</a>.
+			</div>
+			<h2>2015</h2>
+			<div class="year">
+				<div class="issue">
+					<img class="thumbnail" src="2015-07.jpg">
+					<a class="button" href="2015-07.pdf">Spring</a>
+				</div>
+				<div class="cb"></div>
 			</div>
 			<h2>2014</h2>
 			<div class="year">
@@ -171,6 +180,13 @@
 					<a class="button" href="2004-11.pdf">November</a>
 				</div>
 				<div class="cb"></div>
+			</div>
+			<h2>Credits</h2>
+			<div class="year">
+			Thanks to <a href="https://shashankmehta.in">Shashank Mehta</a>,
+			<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
+			<a href="https://www.facebook.com/rishav42kr">Rishav</a>
+			for helping me build this archive.
 			</div>
 		</div>
 	</body>
