Adds 2015 Autumn issue

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 					<img class="thumbnail" src="2015-07.jpg">
 					<a class="button" href="2015-07.pdf">Spring</a>
 				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2015-10.jpg">
+					<a class="button" href="2015-10.pdf">Autumn</a>
+				</div>
 				<div class="cb"></div>
 			</div>
 			<h2>2014</h2>
@@ -183,7 +187,8 @@
 			</div>
 			<h2>Credits</h2>
 			<div class="year">
-			Thanks to <a href="https://shashankmehta.in">Shashank Mehta</a>,
+			Thanks to <a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
+			<a href="https://shashankmehta.in">Shashank Mehta</a>,
 			<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
 			<a href="https://www.facebook.com/rishav42kr">Rishav</a>
 			for helping me build this archive.
