--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 		<div id="wrapper">
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
-				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA website</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. These archives are maintained by <a href="http://captnemo.in/about">Nemo</a>, in case you were wondering... (pseudo-wona)<br>
-				You may also be interested in <a href="https://facebook.com/PlanetIITR">Planet IITR</a>(<a href="https://twitter.com/planetiitr">twitter</a>), a single source for all blogs, articles, and news related to IITR campus.<br>
-				The PlanetIITR Page is currently looking for maintainers, since I've graduated. In case you'd like to help me with that, let me know.<br>
+				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA website</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. These archives are maintained by <a href="http://captnemo.in/about">Nemo</a>, in case you were wondering...<br>
 				If you have a copy of an issue that is not listed here, please <a href="/contact/">get in touch with me</a>.
+			</div>
+			<h2>2016</h2>
+			<div class="year">
+				<div class="issue">
+					<img class="thumbnail" src="2016-10.jpg">
+					<a class="button" href="2016-10.pdf">Autumn</a>
+				</div>
+				<div class="cb"></div>
 			</div>
 			<h2>2015</h2>
 			<div class="year">
