--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html>
 	<head>
-      	<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>Watch Out Archives</title>
-		<link rel="stylesheet" href="style.css" type="text/css">
-      	<script type="text/javascript">
-			var _gaq = _gaq || [];
-  			_gaq.push(['_setAccount', 'UA-5922129-9']);
-  			_gaq.push(['_trackPageview']);
-  			(function() {
-    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  			})();
-		</script>
+		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body lang="en">
 		<div id="wrapper">
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
-				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in/">WoNA website</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. These archives are maintained by <a href="http://captnemo.in/about">Nemo</a>, in case you were wondering...<br>
-				If you have a copy of an issue that is not listed here, please <a href="/contact/">get in touch with me</a>.
+				Hi. Perhaps you'd be interested in visiting the
+				<a href="http://wona.co.in/">WoNA website</a>, or their
+				<a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>.
+				These archives are maintained by
+				<a href="http://captnemo.in/about">Nemo</a>, in case you were
+				wondering...<br />
+				If you have a copy of an issue that is not listed here, please
+				<a href="/contact/">get in touch with me</a>. The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>.
 			</div>
 			<h2>2016</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2016-10.jpg">
+					<img class="thumbnail" src="2016-10.jpg" />
 					<a class="button" href="2016-10.pdf">Autumn</a>
 				</div>
 				<div class="cb"></div>
@@ -33,11 +29,11 @@
 			<h2>2015</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2015-07.jpg">
+					<img class="thumbnail" src="2015-07.jpg" />
 					<a class="button" href="2015-07.pdf">Spring</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2015-10.jpg">
+					<img class="thumbnail" src="2015-10.jpg" />
 					<a class="button" href="2015-10.pdf">Autumn</a>
 				</div>
 				<div class="cb"></div>
@@ -45,11 +41,11 @@
 			<h2>2014</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2014-04.jpg">
+					<img class="thumbnail" src="2014-04.jpg" />
 					<a class="button" href="2014-04.pdf">Spring</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2014-10.jpg">
+					<img class="thumbnail" src="2014-10.jpg" />
 					<a class="button" href="2014-10.pdf">Autumn</a>
 				</div>
 				<div class="cb"></div>
@@ -57,56 +53,57 @@
 			<h2>2013</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2013-02.jpg">
+					<img class="thumbnail" src="2013-02.jpg" />
 					<a class="button" href="2013-02.pdf">February</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2013-04.jpg">
+					<img class="thumbnail" src="2013-04.jpg" />
 					<a class="button" href="2013-04.pdf">April</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2013-11.jpg">
+					<img class="thumbnail" src="2013-11.jpg" />
 					<a class="button" href="2013-11.pdf">November</a>
-				</div>"
+				</div>
+				"
 				<div class="cb"></div>
 			</div>
 			<h2>2012</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2012-04-newsletter.jpg">
+					<img class="thumbnail" src="2012-04-newsletter.jpg" />
 					<a class="button" href="2012-04-newsletter.pdf">Newsletter</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2012-09.jpg">
+					<img class="thumbnail" src="2012-09.jpg" />
 					<a class="button" href="2012-09.pdf">September</a>
 				</div>
 				<div class="cb"></div>
 			</div>
-			
+
 			<h2>2011</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2011-02.jpg">
+					<img class="thumbnail" src="2011-02.jpg" />
 					<a class="button" href="2011-02.pdf">February</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2011-04.jpg">
+					<img class="thumbnail" src="2011-04.jpg" />
 					<a class="button" href="2011-04.pdf">April</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2011-09.jpg">
+					<img class="thumbnail" src="2011-09.jpg" />
 					<a class="button" href="2011-09.pdf">September</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2011-12.jpg">
+					<img class="thumbnail" src="2011-12.jpg" />
 					<a class="button" href="2011-12.pdf">December</a>
-				</div>				
+				</div>
 				<div class="cb"></div>
 			</div>
 			<h2>2010</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2010-12.jpg">
+					<img class="thumbnail" src="2010-12.jpg" />
 					<a class="button" href="2010-12.pdf">December</a>
 				</div>
 				<div class="cb"></div>
@@ -114,15 +111,15 @@
 			<h2>2009</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2009-02.jpg">
+					<img class="thumbnail" src="2009-02.jpg" />
 					<a class="button" href="2009-02.pdf">February</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2009-04.jpg">
+					<img class="thumbnail" src="2009-04.jpg" />
 					<a class="button" href="2009-04.pdf">April</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2009-11.jpg">
+					<img class="thumbnail" src="2009-11.jpg" />
 					<a class="button" href="2009-11.pdf">November</a>
 				</div>
 				<div class="cb"></div>
@@ -130,19 +127,19 @@
 			<h2>2008</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2008-02.jpg">
+					<img class="thumbnail" src="2008-02.jpg" />
 					<a class="button" href="2008-02.pdf">February</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2008-04.jpg">
+					<img class="thumbnail" src="2008-04.jpg" />
 					<a class="button" href="2008-04.pdf">April</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2008-09.jpg">
+					<img class="thumbnail" src="2008-09.jpg" />
 					<a class="button" href="2008-09.pdf">September</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2008-11.jpg">
+					<img class="thumbnail" src="2008-11.jpg" />
 					<a class="button" href="2008-11.pdf">November</a>
 				</div>
 				<div class="cb"></div>
@@ -150,19 +147,19 @@
 			<h2>2007</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2007-02.jpg">
+					<img class="thumbnail" src="2007-02.jpg" />
 					<a class="button" href="2007-02.pdf">February</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2007-04.jpg">
+					<img class="thumbnail" src="2007-04.jpg" />
 					<a class="button" href="2007-04.pdf">April</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2007-09.jpg">
+					<img class="thumbnail" src="2007-09.jpg" />
 					<a class="button" href="2007-09.pdf">September</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2007-11.jpg">
+					<img class="thumbnail" src="2007-11.jpg" />
 					<a class="button" href="2007-11.pdf">November</a>
 				</div>
 				<div class="cb"></div>
@@ -170,11 +167,11 @@
 			<h2>2006</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2006-09.jpg">
+					<img class="thumbnail" src="2006-09.jpg" />
 					<a class="button" href="2006-09.pdf">September</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2006-11.jpg">
+					<img class="thumbnail" src="2006-11.jpg" />
 					<a class="button" href="2006-11.pdf">November</a>
 				</div>
 				<div class="cb"></div>
@@ -182,22 +179,22 @@
 			<h2>2004</h2>
 			<div class="year">
 				<div class="issue">
-					<img class="thumbnail" src="2004-09.jpg">
+					<img class="thumbnail" src="2004-09.jpg" />
 					<a class="button" href="2004-09.pdf">September</a>
 				</div>
 				<div class="issue">
-					<img class="thumbnail" src="2004-11.jpg">
+					<img class="thumbnail" src="2004-11.jpg" />
 					<a class="button" href="2004-11.pdf">November</a>
 				</div>
 				<div class="cb"></div>
 			</div>
 			<h2>Credits</h2>
 			<div class="year">
-			Thanks to <a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
-			<a href="https://shashankmehta.in">Shashank Mehta</a>,
-			<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
-			<a href="https://www.facebook.com/rishav42kr">Rishav</a>
-			for helping me build this archive.
+				Thanks to <a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
+				<a href="https://shashankmehta.in">Shashank Mehta</a>,
+				<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
+				<a href="https://www.facebook.com/rishav42kr">Rishav</a>
+				for helping me build this archive.
 			</div>
 		</div>
 	</body>
