--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
 				If you have a copy of an issue that is not listed here, please
 				<a href="/contact/">get in touch with me</a>. The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>.
 			</div>
+			<h2>2019</h2>
+			<div class="year">
+				<div class="issue">
+					<img class="thumbnail" src="2019-08.jpg" />
+					<a class="button" href="2019-08.pdf">Freshman</a>
+				</div>
+				<div class="cb"></div>
+			</div>
+			<h2>2017</h2>
+			<div class="year">
+				<div class="issue">
+					<img class="thumbnail" src="2017-11.jpg" />
+					<a class="button" href="2017-11.pdf">Autumn</a>
+				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2017-04.jpg" />
+					<a class="button" href="2017-04.pdf">Spring</a>
+				</div>
+				<div class="issue">
+					<img class="thumbnail" src="2017-07.jpg" />
+					<a class="button" href="2017-07.pdf">Freshman</a>
+				</div>
+				<div class="cb"></div>
+			</div>
+
 			<h2>2016</h2>
 			<div class="year">
 				<div class="issue">
@@ -26,6 +51,7 @@
 				</div>
 				<div class="cb"></div>
 			</div>
+
 			<h2>2015</h2>
 			<div class="year">
 				<div class="issue">
@@ -190,7 +216,8 @@
 			</div>
 			<h2>Credits</h2>
 			<div class="year">
-				Thanks to <a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
+				Thanks to <a href="#">Aman Nayak</a>,
+				<a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
 				<a href="https://shashankmehta.in">Shashank Mehta</a>,
 				<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
 				<a href="https://www.facebook.com/rishav42kr">Rishav</a>
