--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
 			</div>
 			<h2>Credits</h2>
 			<div class="year">
-				Thanks to <a href="#">Aman Nayak</a>,
+				Thanks to <a href="#">Surya Raman</a>,
+				<a href="#">Aman Nayak</a>,
 				<a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
 				<a href="https://shashankmehta.in">Shashank Mehta</a>,
 				<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
