--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 			<h1>Watch Out News Agency Archives</h1>
 			<div id="helptext">
 				Hi. Perhaps you'd be interested in visiting the
-				<a href="http://wona.co.in/">WoNA website</a>, or their
-				<a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>.
-				These archives are maintained by
-				<a href="http://captnemo.in/about">Nemo</a>, in case you were
-				wondering...<br />
-				If you have a copy of an issue that is not listed here, please
-				<a href="/contact/">get in touch with me</a>. The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>.
+				<a href="http://watchout.iitr.ac.in/">WoNA website</a>.
+				If you have a copy of an issue that is not listed here, please reach out <a href="/contact/">to me</a>.
+				The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>.
 			</div>
 			<h2>2019</h2>
 			<div class="year">
@@ -90,7 +86,6 @@
 					<img class="thumbnail" src="2013-11.jpg" />
 					<a class="button" href="2013-11.pdf">November</a>
 				</div>
-				"
 				<div class="cb"></div>
 			</div>
 			<h2>2012</h2>
