--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Watch Out Archives</title>
+		<title>Watch Out News Agency Archives</title>
+		<meta charset="utf-8">
+	  <meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
+	  <meta name="author" content="Abhay Rana (Nemo)">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body lang="en">
