Adds collage for fun

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Important Stuff -->
 		<meta charset="utf-8" />
 		<title>Watch Out News Agency Archives</title>
-		<meta charset="utf-8">
-	  <meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
-	  <meta name="author" content="Abhay Rana (Nemo)">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" type="text/css" />
+
+		<!-- Generic Stuff -->
+	  <meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
+	  <meta name="author" content="Abhay Rana (Nemo)">
+		<link rel="canonical" href="https://captnemo.in/wona/">
+
+		<!-- Twitter Stuff -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@captn3m0">
+		<meta name="twitter:creator" content="captn3m0">
+		<meta name="twitter:title" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
+		<meta name="twitter:description" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
+		<meta name="twitter:image:src" content="https://captnemo.in/wona/collage.jpg">
+
+		<!-- Facebook Stuff -->
+
+		<meta property="og:url" content="https://captnemo.in/wona/">
+		<meta property="og:type" content="article">
+		<meta property="og:title" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
+		<meta property="og:image" content="https://captnemo.in/wona/collage.jpg"/>
+		<meta property="og:description" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
+		<meta property="og:site_name" content="Watch Out News Agency Archive">
+		<meta property="article:author" content="https://captnemo.in">
+		<meta property="article:publisher" content="https://captnemo.in">
+
+		<!-- Google Stuff -->
+		<link rel="author" href="https://twitter.com/captn3m0">
+		<link rel="publisher" href="https://captnemo.in">
+		<meta itemprop="name" content="Watch Out News Agency Archive">
+		<meta itemprop="description" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
+		<meta itemprop="image" content="https://captnemo.in/wona/collage.jpg">
+
 	</head>
 	<body lang="en">
 		<div id="wrapper">
