Adds link to issuu

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<!-- Important Stuff -->
 		<meta charset="utf-8" />
 		<title>Watch Out News Agency Archives</title>
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" type="text/css" />
 
 		<!-- Generic Stuff -->
-	  <meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
-	  <meta name="author" content="Abhay Rana (Nemo)">
+	  	<meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
+	  	<meta name="author" content="Abhay Rana (Nemo)">
 		<link rel="canonical" href="https://captnemo.in/wona/">
 
 		<!-- Twitter Stuff -->
@@ -21,7 +21,6 @@
 		<meta name="twitter:image:src" content="https://captnemo.in/wona/collage.jpg">
 
 		<!-- Facebook Stuff -->
-
 		<meta property="og:url" content="https://captnemo.in/wona/">
 		<meta property="og:type" content="article">
 		<meta property="og:title" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
@@ -37,7 +36,6 @@
 		<meta itemprop="name" content="Watch Out News Agency Archive">
 		<meta itemprop="description" content="Archive for all collected issues of the Watch Out News Agency, IIT Roorkee.">
 		<meta itemprop="image" content="https://captnemo.in/wona/collage.jpg">
-
 	</head>
 	<body lang="en">
 		<div id="wrapper">
@@ -46,7 +44,7 @@
 				Hi. Perhaps you'd be interested in visiting the
 				<a href="http://watchout.iitr.ac.in/">WoNA website</a>.
 				If you have a copy of an issue that is not listed here, please reach out <a href="/contact/">to me</a>.
-				The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>.
+				The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>. If you don't like PDF, these are also available to read online now at <https://issuu.com/wona-iitr>.
 			</div>
 			<h2>2019</h2>
 			<div class="year">
@@ -245,8 +243,8 @@
 			</div>
 			<h2>Credits</h2>
 			<div class="year">
-				Thanks to <a href="#">Surya Raman</a>,
-				<a href="#">Aman Nayak</a>,
+				Thanks to Surya Raman,
+				Aman Nayak,
 				<a href="https://twitter.com/ubajpai96">Utkarsh Bajpai</a>,
 				<a href="https://shashankmehta.in">Shashank Mehta</a>,
 				<a href="https://www.facebook.com/abhijeetgaur16">Abhijeet Gaur</a>, and
