Adds 2020 Autumn issue.
If you're reading this in the future, a pandemic
happened

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<!-- Important Stuff -->
 		<meta charset="utf-8" />
 		<title>Watch Out News Agency Archives</title>
-	  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" type="text/css" />
 
 		<!-- Generic Stuff -->
-	  	<meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
-	  	<meta name="author" content="Abhay Rana (Nemo)">
+  	<meta name="keywords" content="IIT Roorkee, Watch Out, WoNA, Watch Out News Agency, Archives, PDFs, Download, Library">
+  	<meta name="author" content="Abhay Rana (Nemo)">
 		<link rel="canonical" href="https://captnemo.in/wona/">
 
 		<!-- Twitter Stuff -->
@@ -45,6 +45,14 @@
 				<a href="http://watchout.iitr.ac.in/">WoNA website</a>.
 				If you have a copy of an issue that is not listed here, please reach out <a href="/contact/">to me</a>.
 				The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>. If you don't like PDF, these are also available to read online now at <https://issuu.com/wona-iitr>.
+			</div>
+			<h2>2020</h2>
+			<div class="year">
+				<div class="issue">
+					<img class="thumbnail" src="2020-01.jpg" />
+					<a class="button" href="2020-01.pdf">Autumn</a>
+				</div>
+				<div class="cb"></div>
 			</div>
 			<h2>2019</h2>
 			<div class="year">
