Fix link to issuu

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				Hi. Perhaps you'd be interested in visiting the
 				<a href="http://watchout.iitr.ac.in/">WoNA website</a>.
 				If you have a copy of an issue that is not listed here, please reach out <a href="/contact/">to me</a>.
-				The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>. If you don't like PDF, these are also available to read online now at <https://issuu.com/wona-iitr>.
+				The source for this is on <a href="https://github.captnemo.in/wona">GitHub</a>. If you don't like PDF, these are also available to read online now at <a href="https://issuu.com/wona-iitr" title="Watch Out, IIT Roorkee @ issuu.com">issuu.com/wona-iitr</a>
 			</div>
 			<h2>2020</h2>
 			<div class="year">
